# pomegranate

./: .gitignore  .pyproject.toml  LICENSE  README.md  clustering_environment.yml  env.yml  env2.yml  env_portable.yml  pyproject.toml  setup.py  structures
datasets/: human_known_kinases.txt  yeast_full.txt
embeddings/: ALL_CURRENT.csv  embeddings.csv
graphs/: 121p_PDB.json
pomegranate/: app.py  app_testing.py  cli.py  cluster.py  cluster_embeddings.py  cluster_graphs.py  definitions.py  example.sh  help_tab.py  interactive.ipynb  load.py  test_app_clustering.py  validate.py  visualise_embeddings.py
pomegranate/assets/: main.css  sideBySideDisplay.css  typography.css
pomegranate/clustering/: README.md  load.py
pomegranate/json_conversion/: graphein_to_json.py
pomegranate/pages/: seeMotif.py
pomegranate/protein/: hydrophobicity.csv  hydrophobicity_map.py  interactions.py  phosphosite.py  residue_properties.py
pomegranate/tabs/: clustering.py  clustering_dump.py  multipleCompare.py  seeMotif.py  sideBySide.py
pomegranate/test/: test.py
pomegranate/utils/: amino_acid.py  clustering_functions.py
pomegranate/visualisation/: plot.py  surface.py
scripts/: phosphosite_dump_filtering.sh
