[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "pomegranate-cli"
version = "0.0.1"
authors = [
  { name="Cam McMenamie", email="cameron.mcmenamie@student.unsw.edu.au" },
  { name="Hannah Veitch", email="hannah.veitch@student.unsw.edu.au" },
  { name="Naomi Warren", email="naomi.warren@student.unsw.edu.au" },
  { name="Austin Tsai", email="austin.tsai@student.unsw.edu.au" },
]
description = "Phosphosite motif explorer"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/cimranm/pomegranate"
"Bug Tracker" = "https://github.com/cimranm/pomegranate/issues"
